--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,7 +2,7 @@ name: Cypress Tests
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "cypress-tests"]
   pull_request:
     branches: ["main"]
 
