--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "dev": "vite",
     "start": "vite",
     "start-backend": "cd ../backend && pipenv run python manage.py runserver 0.0.0.0:8000",
-    "start-dev-server": "yarn run start-backend & yarn run dev --port 3000",
+    "start-dev-server": "concurrently -n backend,frontend \"yarn run start-backend\" \"yarn run dev --port 3000\"",
     "lint": "eslint . --ext .ts,.tsx",
     "pretty": "prettier --write ."
   },
@@ -52,6 +52,7 @@
     "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "concurrently": "^7.5.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.10",
     "@vitejs/plugin-react": "2.1.0",
