--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -123,4 +123,4 @@ jobs:
         with:
           working-directory: ./frontend
           start: yarn run start-dev-server
-          wait-on: 'http://localhost:3000/login'
+          wait-on: "http://localhost:3000/login"
